bug fixes + handle invalid routes

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-POSTGRES_URL="postgres://postgres:Chajay55555%40@localhost:5432/stockdb"
+POSTGRES_URL="postgres://postgres:Chajay55555%40@localhost:5432/stocksdb?sslmode=disable"
